before desin with table

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta dir="rtl" />
 
-    <title>BitBarg</title>
+    <title>بیت برگ</title>
   </head>
   <body>
     <div id="root"></div>
