create functionality searchbar

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta dir="rtl" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://bitbarg.me/favicon/favicon-16x16.png"
+    />
 
-    <title>بیت برگ</title>
+    <title>بیت برگ | خرید بیت کوین، فروش بیت کوین، قیمت بیت کوین</title>
   </head>
   <body>
     <div id="root"></div>
